// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreCard renders a store card 1`] = `
<div>
  <li
    class="w-[90%] sm:w-[45%] md:w-[32%] rounded-2xl block p-5 bg-[#EFEFE9]"
  >
    <h3
      class="font-medium mb-3"
    >
      Store Chain 1
      , 
      City 1
    </h3>
    <p
      class="text-sm gap-1 text-gray-500 flex items-center"
    >
      <span>
        <svg
          fill="gray"
          height="15"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"
          />
        </svg>
      </span>
      <span>
        Address 1
      </span>
    </p>
    <p
      class="text-sm gap-1 text-gray-500 flex items-center"
    >
      <span>
        <svg
          fill="gray"
          height="13"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"
          />
        </svg>
      </span>
      <span>
        22222222
      </span>
    </p>
    <p
      class="mt-5 text-sm"
    >
      <span
        class="text-sm rounded-md py-1 px-3 bg-green-400 text-white"
      >
        Åpent
      </span>
      <span
        class="pl-4 text-gray-500"
      >
        9:00 AM - 5:00 PM
      </span>
    </p>
  </li>
</div>
`;

exports[`StoreList renders a list of stores 1`] = `
<div>
  <ul
    class="flex mt-5 justify-center flex-wrap gap-4"
  >
    <li
      class="w-[90%] sm:w-[45%] md:w-[32%] rounded-2xl block p-5 bg-[#EFEFE9]"
    >
      <h3
        class="font-medium mb-3"
      >
        Store Chain 1
        , 
        City 1
      </h3>
      <p
        class="text-sm gap-1 text-gray-500 flex items-center"
      >
        <span>
          <svg
            fill="gray"
            height="15"
            viewBox="0 0 24 24"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"
            />
          </svg>
        </span>
        <span>
          Address 1
        </span>
      </p>
      <p
        class="text-sm gap-1 text-gray-500 flex items-center"
      >
        <span>
          <svg
            fill="gray"
            height="13"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"
            />
          </svg>
        </span>
        <span>
          22222222
        </span>
      </p>
      <p
        class="mt-5 text-sm"
      >
        <span
          class="text-sm rounded-md py-1 px-3 bg-green-400 text-white"
        >
          Åpent
        </span>
        <span
          class="pl-4 text-gray-500"
        >
          9:00 AM - 5:00 PM
        </span>
      </p>
    </li>
    <li
      class="w-[90%] sm:w-[45%] md:w-[32%] rounded-2xl block p-5 bg-[#EFEFE9]"
    >
      <h3
        class="font-medium mb-3"
      >
        Store Chain 2
        , 
        City 2
      </h3>
      <p
        class="text-sm gap-1 text-gray-500 flex items-center"
      >
        <span>
          <svg
            fill="gray"
            height="15"
            viewBox="0 0 24 24"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"
            />
          </svg>
        </span>
        <span>
          Address 2
        </span>
      </p>
      <p
        class="text-sm gap-1 text-gray-500 flex items-center"
      >
        <span>
          <svg
            fill="gray"
            height="13"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 22.621l-3.521-6.795c-.008.004-1.974.97-2.064 1.011-2.24 1.086-6.799-7.82-4.609-8.994l2.083-1.026-3.493-6.817-2.106 1.039c-7.202 3.755 4.233 25.982 11.6 22.615.121-.055 2.102-1.029 2.11-1.033z"
            />
          </svg>
        </span>
        <span>
          12345678
        </span>
      </p>
      <p
        class="mt-5 text-sm"
      >
        <span
          class="text-sm rounded-md py-1 px-3 bg-green-400 text-white"
        >
          Åpent
        </span>
        <span
          class="pl-4 text-gray-500"
        >
          9:00 AM - 5:00 PM
        </span>
      </p>
    </li>
  </ul>
</div>
`;

exports[`StoreOpenStatus renders closed status 1`] = `
<div>
  <span
    class="text-sm rounded-md py-1 px-3 bg-red-500 text-red-600"
  >
    Stengt
  </span>
</div>
`;

exports[`StoreOpenStatus renders open status 1`] = `
<div>
  <span
    class="text-sm rounded-md py-1 px-3 bg-green-400 text-white"
  >
    Åpent
  </span>
</div>
`;
